# clinical-informatics

./: .gitignore  LIMITATIONS_AND_GOVERNANCE.md  METHODOLOGY.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt
app/: __init__.py  streamlit_app.py
data/: data_dictionary.md
data/synthetic/: adverse_events.csv  labs.csv  milestones.csv  participants.csv  protocol_deviations.csv  queries.csv  sites.csv  visits.csv
docs/: clinical_data_management_awareness.md  dashboard_design_notes.md  fyp_reuse_assessment.md  protocol_to_data_mapping.md  relational_data_design.md
notebooks/: relational_data_practice.py
outputs/: ae_summary.csv  build_manifest.md  metrics_summary.md  missingness.csv  overview.csv  query_metrics.csv  relational_data_practice_interpretation.md  relational_practice_enrollment_by_site.csv  relational_practice_lab_missingness.csv  relational_practice_query_ageing.csv  relational_practice_visit_adherence.csv  site_metrics.csv  validation_flags.csv  validation_issues.csv  validation_report.md  validation_summary.csv  visit_adherence.csv
src/clinical_informatics/: __init__.py  build_project.py  config.py  generate_synthetic_data.py  metrics.py  reporting.py  validation.py
tests/: test_dashboard_and_build.py  test_data_generation.py  test_validation_and_metrics.py
